--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./favicon.ico" />
     <meta
         name="description"
-        content="Web site created using create-react-app"
+        content="Smoothing Pool to maximize MEV rewards for Home Validators."
         />
     <title>Smoothly Protocol</title>
   </head>
